# vCMD

./: Cargo.toml  LICENSE  README.md  main.py
src/: assign.rs  create.rs  lib.rs  list.rs  log.py  main.rs  remove.rs  template.py  u.rs  upload.rs  v_api.py  vcmd.py  velocity.rs  wizard.rs
src/u/: u_auth.rs
src/velocity/: authkey.rs  endpoints.rs  error.rs  reqwest.rs
src/velocity/endpoints/: u.rs
src/velocity/endpoints/u/: u_auth.rs  u_user.rs
src/wizard/: corevm.rs  disks.rs  displays.rs  nics.rs
velocity/: Cargo.toml
velocity/src/: lib.rs  velocity.rs
velocity/src/velocity/: endpoints.rs  reqwest.rs
velocity/src/velocity/endpoints/: m.rs  u.rs  v.rs
velocity/src/velocity/endpoints/m/: m_media.rs  m_pool.rs
velocity/src/velocity/endpoints/u/: u_auth.rs  u_group.rs  u_user.rs  u_user_permission.rs
velocity/src/velocity/endpoints/v/: v_nic.rs  v_vm.rs
velocity/src/velocity/endpoints/v/v_vm/: v_vm_efi.rs
