[package]
name = "vcmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clik = { version = "0.2.1", features = ["async"] }
rpassword = "7.2.0"
rustyline = "12.0.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
velocity = { path = "./velocity" }
