[package]
name = "velocity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json", "stream"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features = ["fs"], default-features = false }
tokio-util = { version = "0.7.9", features = [
    "codec",
], default-features = false }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
async-stream = "0.3.5"
futures-util = "0.3.28"
